--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   chart-certification:
     name: Chart Certification
+    permissions:
+      pull-requests: write
     runs-on: ubuntu-20.04
     if: |
       github.event.pull_request.draft == false &&
