--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,8 @@ jobs:
   chart-certification:
     name: Chart Certification
     permissions:
-      pull-requests: write
+      pull-requests: write # for adding comments to the PR
+      contents: write # for creating releases
     runs-on: ubuntu-20.04
     if: |
       github.event.pull_request.draft == false &&
